--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <!-- Bootstrap core CSS -->
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<link href="/COVID/contact.css" rel="stylesheet">
+<link href="/xyz/contact.css" rel="stylesheet">
 
     
     <!-- Custom styles for this template -->
