--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
     
 
     <!-- Bootstrap core CSS -->
-<link href="/COVID/project.css" rel="stylesheet">
+<link href="/xyz/project.css" rel="stylesheet">
 
     
     <!-- Custom styles for this template -->
@@ -47,7 +47,7 @@
     <h1>Help India to fight against covid.</h1>
     <p class="lead" style="font-family:  Arial, Helvetica, sans-serif ">Each donation does make a difference.</p>
     <p class="lead">
-      <form><script src="https://pages.razorpay.com/pl_HPO6Bk3K6hX3FX/view" data-payment_button_id="pl_H8FZeTuZUdbwkj" async> </script> </form>
+      <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HPOiDZgSjAGdB3" async> </script> </form>
     </p> 
   </main>
 
